src/app/components/person-velger/personvelger.css
.personvelger {
    display: grid;
    row-gap: 1rem;
    padding: 1rem;
    background-color: var(--ax-bg-neutral-soft);
    border-radius: 0.25rem;

    .personlinje {
        display: grid;
        column-gap: 1rem;
        grid-template-columns: 2fr 3fr 1fr;

        .aksel-form-field__label {
            opacity: 1;
        }

        .navn {
            p:nth-of-type(2) {
                margin-top: 0.625rem;
            }
        }

        .slett {
            margin: 1.25rem -0.8125rem 0 0;
        }

        .aksel-checkbox {
            align-self: end;
            margin-bottom: 0.5rem;
        }
    }

    button {
        max-width: 9.375rem;
    }
}

